# coda

./: .codaignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  index.ts  package.json  pyproject.toml  styles_dark.tcss  styles_light.tcss  theme.py  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml.disabled
coda/: README.md  package.json
coda-python/: README.md  app.py  styles_dark.tcss  styles_light.tcss  theme.py
coda/src/: index.tsx  theme.ts
docs/: advanced.md  setup.md  usage.md
examples/sample_task/: README.md  __init__.py  main.py  test_main.py
examples/todo-app/: index.html
scripts/: copy-static.js
src/: coda.tsx  commands.ts
src/agent/: graph.ts  index.ts  model-factory.ts  prompts.ts  scoped-backend.ts  tool-error-middleware.ts  tools.ts
src/app/: agent-runner.ts  command-executor.ts  commands.ts  store.ts  stream-processor.ts
src/coda/: main.py
src/config/: models.ts
src/electron/: main.ts  preload.ts
src/evals/: agent.eval.test.ts  agent.eval.ts  index.ts  seed-dataset.ts
src/ipc/: events.ts
src/lib/: ansi.ts  api-key-format.ts  config.ts  constants.ts  context.ts  diff.ts  file-search.ts  id.ts  image-paste.ts  logger.ts  messages.ts  models.ts  storage.ts  time.ts  token-utils.ts  tool-result.ts
src/renderer/: App.tsx  index.html  index.tsx
src/store/: index.ts
src/tui/: App.tsx  figures.ts  theme.ts
src/types/: agent.ts  commands.ts  global.d.ts  index.ts  text-input.ts  tui.ts  ui.ts
src/ui/: App.tsx
src/utils/: apiKey.ts  diff.ts  helpers.ts  logger.ts  (+1 more)
tests/: __init__.py  conftest.py
(+113 files in other folders)
